fix icon overlap

--- a/assets/styles/datawrapper/common/select.less
+++ b/assets/styles/datawrapper/common/select.less
@@ -5,7 +5,7 @@
     font-weight: 700;
     color: #444;
     line-height: 1.3;
-    padding: 4px 6px;
+    padding: 4px 24px 4px 6px;
     max-width: 100%; /* useful when width is set to anything other than 100% */
     box-sizing: border-box;
     margin: 0;
